update submodule to public link

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "rules"]
 	path = rules
-	url = git@github.com:NottingHack/rules.git
+	url = https://github.com/NottingHack/rules.git
 	branch = rtd-draft
